--- a/asterisk_etc/pjsip.conf
+++ b/asterisk_etc/pjsip.conf
@@ -9,6 +9,11 @@ user_agent=Magnus-PBX-Asterisk22
 max_forwards=70
 keep_alive_interval=90
 contact_expiration_check_interval=30
+; Necessário para multi-tenant por domínio (ramal@slug)
+disable_multi_domain=no
+; CRÍTICO para multi-tenant: username usa ps_domain_aliases para resolver ramal@slug
+; Ordem: 1) username+domínio (ps_domain_aliases) → 2) ip (ps_identify) → 3) anon
+endpoint_identifier_order=username,ip,anonymous
 
 ; ============================================
 ; SYSTEM CONFIGURATION
