--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -17,11 +17,14 @@ aor=realtime,ps_aors
 ; transport definido em pjsip.conf (realtime não funciona bem)
 contact=realtime,ps_contacts
 ; Domain alias para matching multi-tenant dinâmico
+; ps_domain_aliases.domain = o que o softphone usa como servidor SIP
+; ps_domain_aliases.id     = o slug do tenant (parte após @ no endpoint id)
+; Fluxo: softphone usa belavista.magnussystem.com.br → alias id=belavista → endpoint 1001@belavista
 domain_alias=realtime,ps_domain_aliases
+identify=realtime,ps_identify
 
 [res_pjsip_endpoint_identifier_ip]
-; Identificação por IP desabilitada (usamos DNS via ps_domain_aliases)
-; identify=realtime,ps_identify
+identify=realtime,ps_identify
 
 ; ============================================
 ; NOTA IMPORTANTE SOBRE TRANSPORTS
