fix(sql): add ps_domain_aliases.domain_alias for pjsip multi-domain matching

--- a/asterisk_etc/pjsip.conf
+++ b/asterisk_etc/pjsip.conf
@@ -44,7 +44,7 @@ disable_tcp_switch=yes
 ; Como funciona:
 ; 1. Softphone registra: 1001@belavista.magnussystem.com.br
 ; 2. Transport aceita (sem restrição)
-; 3. ps_domain_aliases mapeia: belavista.magnussystem.com.br → belavista
+; 3. ps_domain_aliases.domain_alias mapeia: belavista.magnussystem.com.br → belavista
 ; 4. Asterisk busca endpoint: 1001@belavista no banco
 
 [transport-udp]
