fix(pjsip): use ps_endpoint_id_ips for realtime identify mapping

--- a/asterisk_etc/sorcery.conf
+++ b/asterisk_etc/sorcery.conf
@@ -21,10 +21,10 @@ contact=realtime,ps_contacts
 ; ps_domain_aliases.id     = o slug do tenant (parte após @ no endpoint id)
 ; Fluxo: softphone usa belavista.magnussystem.com.br → alias id=belavista → endpoint 1001@belavista
 domain_alias=realtime,ps_domain_aliases
-identify=realtime,ps_identify
+identify=realtime,ps_endpoint_id_ips
 
 [res_pjsip_endpoint_identifier_ip]
-identify=realtime,ps_identify
+identify=realtime,ps_endpoint_id_ips
 
 ; ============================================
 ; NOTA IMPORTANTE SOBRE TRANSPORTS
