--- a/asterisk_etc/extconfig.conf
+++ b/asterisk_etc/extconfig.conf
@@ -7,8 +7,8 @@ ps_auths => pgsql,general
 ps_aors => pgsql,general
 ; Transport definido em pjsip.conf (não funciona bem via realtime)
 ps_contacts => pgsql,general
-; ps_identify: identificação por IP (usado quando domain alias não basta)
-ps_identify => pgsql,general
+; ps_endpoint_id_ips: identificação por IP (schema padrão PJSIP)
+ps_endpoint_id_ips => pgsql,general
 ; ps_domain_aliases: CRÍTICO para multi-tenant por DNS
 ; Mapeia: belavista.magnussystem.com.br → slug 'belavista' → endpoint 1001@belavista
 ps_domain_aliases => pgsql,general
