feat(tenantid): add tenantid migration and dialplan fallback using CHANNEL(tenantid)

--- a/asterisk_etc/routing.conf
+++ b/asterisk_etc/routing.conf
@@ -9,11 +9,12 @@
 [dial-internal]
 exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
  same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
  same => n,Set(DEST_ENDPOINT=${EXTEN}@${TENANT_SLUG})
  
- same => n,NoOp(Route: ${FROM_EXTEN}@${TENANT_SLUG} -> ${DEST_ENDPOINT})
+ same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Route: ${FROM_EXTEN}@${TENANT_SLUG} -> ${DEST_ENDPOINT})
  
  ; Verificar Call Forward
  same => n,Set(CF_TARGET=${DB(CF/${FROM_EXTEN})})
@@ -49,10 +50,11 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
 [dial-outbound]
 exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
  same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
  
- same => n,NoOp(External: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
+ same => n,NoOp(TenantID=${CHANNEL(tenantid)} | External: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
  
  ; Buscar rota de saída via API
  same => n,Set(API_URL=http://backend:5000/api/agi/get-outbound-route)
@@ -91,7 +93,9 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
 [dial-emergency]
 exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Emergency tenant=${TENANT_SLUG})
  
  ; Emergências sempre usam trunk prioritário
  same => n,Set(TRUNK_NAME=trunk-emergency)
