feat(auth): migrate endpoint ids to slug_prefix and support both id formats in dialplan

--- a/asterisk_etc/extensions-features.conf
+++ b/asterisk_etc/extensions-features.conf
@@ -126,7 +126,9 @@ exten => _*334XXXX,1,NoOp(=== Whisper to ${EXTEN:4} ===)
 ; ============================================
 [open-gate]
 exten => s,1,NoOp(=== Open Gate: ${GATE_NAME} - Caller: ${CALLERID(num)} ===)
- same => n,Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
  
  ; Validar permissão via API
  same => n,Set(API_URL=http://backend:5000/api/agi/check-gate-permission)
