--- a/asterisk_etc/routing.conf
+++ b/asterisk_etc/routing.conf
@@ -11,8 +11,12 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
  same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
  same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
  same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
+ same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
  same => n,Set(DEST_ENDPOINT=${EXTEN}@${TENANT_SLUG})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${EXTEN}))
  
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Route: ${FROM_EXTEN}@${TENANT_SLUG} -> ${DEST_ENDPOINT})
  
@@ -22,6 +26,7 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  
  same => n(call_forward),NoOp(Forwarded to ${CF_TARGET})
  same => n,Set(DEST_ENDPOINT=${CF_TARGET}@${TENANT_SLUG})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${CF_TARGET}))
  
  same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
  same => n,Dial(PJSIP/${DEST_ENDPOINT},30,tTr)
@@ -52,7 +57,10 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
  same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
  same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
  same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
+ same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
  
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | External: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
  
@@ -95,6 +103,7 @@ exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
  same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
  same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Emergency tenant=${TENANT_SLUG})
  
  ; Emergências sempre usam trunk prioritário
