fix(dialplan): support slug_prefix endpoint ids in active extensions.conf

--- a/asterisk_etc/extensions.conf
+++ b/asterisk_etc/extensions.conf
@@ -121,9 +121,14 @@ exten => 193,1,Goto(dial-emergency,${EXTEN},1)
 [dial-internal]
 exten => _X.,1,NoOp(=== Internal Call to ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
  same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
+ same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
  same => n,Set(DEST_ENDPOINT=${EXTEN}@${TENANT_SLUG})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${EXTEN}))
  
  same => n,NoOp(Call: ${FROM_EXTEN}@${TENANT_SLUG} -> ${DEST_ENDPOINT})
  
@@ -133,6 +138,7 @@ exten => _X.,1,NoOp(=== Internal Call to ${EXTEN} ===)
  
  same => n(call_forward),NoOp(Forwarded to ${CF_TARGET})
  same => n,Set(DEST_ENDPOINT=${CF_TARGET}@${TENANT_SLUG})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${CF_TARGET}))
  
  same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
  same => n,Dial(PJSIP/${DEST_ENDPOINT},30,tTr)
@@ -161,8 +167,12 @@ exten => _X.,1,NoOp(=== Internal Call to ${EXTEN} ===)
 [dial-outbound]
 exten => _X.,1,NoOp(=== Outbound Call to ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
  same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
+ same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
  
  same => n,NoOp(Outbound: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
  
@@ -189,6 +199,9 @@ exten => _X.,1,NoOp(=== Outbound Call to ${EXTEN} ===)
 [dial-emergency]
 exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
  same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
  
  ; Emergências sempre usam trunk prioritário
  ; Configure no pjsip.conf ou via AGI
