fix(media): set docker-friendly transport addresses and harden UDP endpoint media behavior

--- a/asterisk_etc/pjsip.conf
+++ b/asterisk_etc/pjsip.conf
@@ -52,10 +52,12 @@ type=transport
 protocol=udp
 bind=0.0.0.0:5060
 ; SEM campo 'domain' = aceita todos os domínios (matching via ps_domain_aliases)
-; Se o Asterisk está atrás de NAT, configure:
-; external_media_address=SEU_IP_PUBLICO
-; external_signaling_address=SEU_IP_PUBLICO
-; local_net=10.3.2.0/24
+; Docker/NAT: anunciar IP acessível pelos telefones (evita contato 172.x interno)
+external_signaling_address=10.3.2.253
+external_media_address=10.3.2.253
+; Marcar apenas a rede interna do container como local.
+; Assim clientes da LAN/WAN recebem external_* acima.
+local_net=172.20.0.0/16
 
 ; ============================================
 ; REALTIME ENDPOINTS, AUTHS, AORS
