fix(compose): repair postgres volumes/networks yaml formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       POSTGRES_PASSWORD: magnus123
       POSTGRES_DB: magnus_pbx
     volumes:
-      - ./postgres_data:/var/lib/postgresql/data      - ./sql:/docker-entrypoint-initdb.d    networks:
+      - ./postgres_data:/var/lib/postgresql/data
+      - ./sql:/docker-entrypoint-initdb.d
+    networks:
       - magnus-net
     restart: always
 
