--- a/asterisk_etc/modules.conf
+++ b/asterisk_etc/modules.conf
@@ -7,6 +7,7 @@ noload => chan_oss.so
 noload => res_adsi.so
 noload => cel_sqlite3_custom.so
 noload => cdr_tds.so
+noload => cdr_csv.so
 noload => cel_radius.so
 noload => cdr_radius.so
 noload => cdr_sqlite3_custom.so
