feat(dialplan): enable production feature-codes, transfers, parking and directed pickup for multi-tenant

--- a/asterisk_etc/extensions-features.conf
+++ b/asterisk_etc/extensions-features.conf
@@ -83,6 +83,27 @@ exten => _*60XXX,1,NoOp(=== Conference Room ${EXTEN:3} ===)
  same => n,ConfBridge(${CONF_ROOM})
  same => n,Hangup()
 
+; *8 - Group Pickup
+exten => *8,1,NoOp(=== Group Pickup ===)
+ same => n,Pickup()
+ same => n,Hangup()
+
+; *8XXX - Directed Pickup (3 dígitos)
+exten => _*8XXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
+ same => n,Hangup()
+
+; *8XXXX - Directed Pickup (4 dígitos)
+exten => _*8XXXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
+ same => n,Hangup()
+
 ; ===== PORTARIA VIRTUAL (GATE CONTROL) =====
 
 ; *500 - Abrir Portão Social
