--- a/asterisk_etc/extensions.conf
+++ b/asterisk_etc/extensions.conf
@@ -26,6 +26,7 @@ MAGNUS_VERSION=1.0.0
 [tenant-base](!)
 ; Este template é herdado por todos os contextos de tenant
 ; Exemplo: [ctx-belavista](tenant-base)
+include => parkedcalls
 
 ; --------------------------------------------
 ; FEATURES GLOBAIS (Feature Codes)
@@ -81,6 +82,27 @@ exten => _*60XXX,1,NoOp(=== Conference Room ${EXTEN:3} ===)
  same => n,Answer()
  same => n,Set(CONF_ROOM=${EXTEN:3})
  same => n,ConfBridge(${CONF_ROOM})
+ same => n,Hangup()
+
+; *8 - Group Pickup
+exten => *8,1,NoOp(=== Group Pickup ===)
+ same => n,Pickup()
+ same => n,Hangup()
+
+; *8XXX - Directed Pickup (3 dígitos)
+exten => _*8XXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
+ same => n,Hangup()
+
+; *8XXXX - Directed Pickup (4 dígitos)
+exten => _*8XXXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
+ same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
  same => n,Hangup()
 
 ; --------------------------------------------
@@ -141,7 +163,7 @@ exten => _X.,1,NoOp(=== Internal Call to ${EXTEN} ===)
  same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${CF_TARGET}))
  
  same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
- same => n,Dial(PJSIP/${DEST_ENDPOINT},30,tTr)
+ same => n,Dial(PJSIP/${DEST_ENDPOINT},30,TtKkHhXx)
  
  ; Tratamento de não atendimento
  same => n,GotoIf($["${DIALSTATUS}" = "NOANSWER"]?voicemail)
