--- a/asterisk_etc/routing.conf
+++ b/asterisk_etc/routing.conf
@@ -29,7 +29,7 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${CF_TARGET}))
  
  same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
- same => n,Dial(PJSIP/${DEST_ENDPOINT},30,tTr)
+ same => n,Dial(PJSIP/${DEST_ENDPOINT},30,TtKkHhXx)
  
  ; Tratamento de não atendimento
  same => n,GotoIf($["${DIALSTATUS}" = "NOANSWER"]?voicemail)
@@ -77,7 +77,7 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(TRUNK_NAME=trunk-provider)
  same => n,GotoIf($["${TRUNK_NAME}" != ""]?dial_trunk:no_trunk)
  
- same => n(dial_trunk),Dial(PJSIP/${EXTEN}@${TRUNK_NAME},60,tTr)
+ same => n(dial_trunk),Dial(PJSIP/${EXTEN}@${TRUNK_NAME},60,TtKkHhXx)
  same => n,GotoIf($["${DIALSTATUS}" = "BUSY"]?busy:unavail)
  same => n,Hangup()
  
@@ -108,7 +108,7 @@ exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
  
  ; Emergências sempre usam trunk prioritário
  same => n,Set(TRUNK_NAME=trunk-emergency)
- same => n,Dial(PJSIP/${EXTEN}@${TRUNK_NAME},120,tTr)
+ same => n,Dial(PJSIP/${EXTEN}@${TRUNK_NAME},120,TtKkHhXx)
  
  ; Fallback se trunk não existir
  same => n,Answer()
