--- a/asterisk_etc/tenants.conf
+++ b/asterisk_etc/tenants.conf
@@ -10,6 +10,7 @@
 ; Template herdado por todos os tenants
 ; Herda: features-base → Todos os feature codes (*43, *97, *500, etc)
 ; Define: Padrões de discagem interna e externa
+include => parkedcalls
 
 ; ===== DISCAGEM INTERNA =====
 ; Ramais de 3 dígitos (100-999)
