refactor(dialplan): adopt professional modular loaders with additional/custom split for extensions and features

--- a/asterisk_etc/extensions.conf
+++ b/asterisk_etc/extensions.conf
@@ -1,14 +1,5 @@
 ; ============================================
-; MAGNUS PBX - Multi-tenant Extensions
-; Asterisk 22.8.2 + PostgreSQL Realtime
-; ============================================
-;
-; ARQUITETURA:
-; - Patterns ficam aqui (res_config_pgsql NÃO faz pattern matching)
-; - Endpoints são configurados com context=ctx-{slug}
-; - Cada tenant herda [tenant-base] com todas as features
-; - Dados dinâmicos via AGI scripts PHP
-;
+; MAGNUS PBX - Master Extensions Loader
 ; ============================================
 
 [general]
@@ -17,274 +8,10 @@ writeprotect=no
 clearglobalvars=no
 
 [globals]
-; Variáveis globais
-MAGNUS_VERSION=1.0.0
+MAGNUS_VERSION=2.1.0
 
-; ============================================
-; TEMPLATE BASE PARA TODOS OS TENANTS
-; ============================================
-[tenant-base](!)
-; Este template é herdado por todos os contextos de tenant
-; Exemplo: [ctx-belavista](tenant-base)
-include => parkedcalls
+; Arquivo gerenciado (base)
+#include extensions_additional.conf
 
-; --------------------------------------------
-; FEATURES GLOBAIS (Feature Codes)
-; --------------------------------------------
-
-; *43 - Echo Test (Teste de Áudio)
-exten => *43,1,NoOp(=== Echo Test ===)
- same => n,Answer()
- same => n,Wait(1)
- same => n,Playback(beep)
- same => n,Echo()
- same => n,Hangup()
-
-; *97 - VoiceMail Check (Própria caixa postal)
-exten => *97,1,NoOp(=== VoiceMail Check ===)
- same => n,Answer()
- same => n,Set(MAILBOX=${CUT(CHANNEL(endpoint),@,1)})
- same => n,VoiceMailMain(${MAILBOX}@default)
- same => n,Hangup()
-
-; *98 - VoiceMail Check Any (Qualquer caixa postal)
-exten => *98,1,NoOp(=== VoiceMail Check Any ===)
- same => n,Answer()
- same => n,VoiceMailMain()
- same => n,Hangup()
-
-; *65 - Call Recording (Gravar chamada)
-exten => *65,1,NoOp(=== Call Recording ===)
- same => n,Answer()
- same => n,Set(RECORDING_FILE=/var/spool/asterisk/monitor/${UNIQUEID}.wav)
- same => n,MixMonitor(${RECORDING_FILE})
- same => n,Playback(beep)
- same => n,Hangup()
-
-; *72XXXX - Call Forward Enable
-exten => _*72XXXX,1,NoOp(=== Call Forward Enable to ${EXTEN:3} ===)
- same => n,Answer()
- same => n,Set(FROM_EXTEN=${CUT(CHANNEL(endpoint),@,1)})
- same => n,Set(DB(CF/${FROM_EXTEN})=${EXTEN:3})
- same => n,Playback(call-fwd-on)
- same => n,Hangup()
-
-; *73 - Call Forward Disable
-exten => *73,1,NoOp(=== Call Forward Disable ===)
- same => n,Answer()
- same => n,Set(FROM_EXTEN=${CUT(CHANNEL(endpoint),@,1)})
- same => n,DBdel(CF/${FROM_EXTEN})
- same => n,Playback(call-fwd-off)
- same => n,Hangup()
-
-; *60XXX - Conference Room
-exten => _*60XXX,1,NoOp(=== Conference Room ${EXTEN:3} ===)
- same => n,Answer()
- same => n,Set(CONF_ROOM=${EXTEN:3})
- same => n,ConfBridge(${CONF_ROOM})
- same => n,Hangup()
-
-; *8 - Group Pickup
-exten => *8,1,NoOp(=== Group Pickup ===)
- same => n,Pickup()
- same => n,Hangup()
-
-; *8XXX - Directed Pickup (3 dígitos)
-exten => _*8XXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
- same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
- same => n,Hangup()
-
-; *8XXXX - Directed Pickup (4 dígitos)
-exten => _*8XXXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
- same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
- same => n,Hangup()
-
-; --------------------------------------------
-; DISCAGEM INTERNA (Ramais do Tenant)
-; --------------------------------------------
-
-; Ramais de 3 dígitos (100-999)
-exten => _XXX,1,Goto(dial-internal,${EXTEN},1)
-
-; Ramais de 4 dígitos (1000-9999)
-exten => _XXXX,1,Goto(dial-internal,${EXTEN},1)
-
-; --------------------------------------------
-; DISCAGEM EXTERNA (Rotas de Saída)
-; --------------------------------------------
-
-; Celular 9 dígitos: 9XXXXXXXX
-exten => _9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-
-; DDD: 0XX9XXXXXXXX ou XX9XXXXXXXX
-exten => _0XX9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-exten => _XX9XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-
-; Internacional: 00 + código país
-exten => _00X.,1,Goto(dial-outbound,${EXTEN},1)
-
-; Fixo 8 dígitos: XXXXXXXX (sem 9 na frente)
-exten => _XXXXXXXX,1,Goto(dial-outbound,${EXTEN},1)
-
-; Números de emergência
-exten => 190,1,Goto(dial-emergency,${EXTEN},1)
-exten => 192,1,Goto(dial-emergency,${EXTEN},1)
-exten => 193,1,Goto(dial-emergency,${EXTEN},1)
-
-; ============================================
-; SUB-ROTINA: Discar Ramal Interno
-; ============================================
-[dial-internal]
-exten => _X.,1,NoOp(=== Internal Call to ${EXTEN} ===)
- same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
- same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
- same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
- same => n,Set(DEST_ENDPOINT=${EXTEN}@${TENANT_SLUG})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${EXTEN}))
- 
- same => n,NoOp(Call: ${FROM_EXTEN}@${TENANT_SLUG} -> ${DEST_ENDPOINT})
- 
- ; Verificar Call Forward
- same => n,Set(CF_TARGET=${DB(CF/${FROM_EXTEN})})
- same => n,GotoIf($["${CF_TARGET}" != ""]?call_forward:normal_call)
- 
- same => n(call_forward),NoOp(Forwarded to ${CF_TARGET})
- same => n,Set(DEST_ENDPOINT=${CF_TARGET}@${TENANT_SLUG})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${CF_TARGET}))
- 
- same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
- same => n,Dial(PJSIP/${DEST_ENDPOINT},30,TtKkHhXx)
- 
- ; Tratamento de não atendimento
- same => n,GotoIf($["${DIALSTATUS}" = "NOANSWER"]?voicemail)
- same => n,GotoIf($["${DIALSTATUS}" = "BUSY"]?busy)
- same => n,GotoIf($["${DIALSTATUS}" = "CHANUNAVAIL"]?unavailable)
- same => n,Hangup()
- 
- same => n(voicemail),NoOp(Sending to voicemail - No Answer)
- same => n,VoiceMail(${EXTEN}@default,u)
- same => n,Hangup()
- 
- same => n(busy),NoOp(Extension busy)
- same => n,VoiceMail(${EXTEN}@default,b)
- same => n,Hangup()
- 
- same => n(unavailable),NoOp(Extension unavailable)
- same => n,Playback(ss-noservice)
- same => n,Hangup()
-
-; ============================================
-; SUB-ROTINA: Discar Número Externo
-; ============================================
-[dial-outbound]
-exten => _X.,1,NoOp(=== Outbound Call to ${EXTEN} ===)
- same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
- same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
- same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
- 
- same => n,NoOp(Outbound: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
- 
- ; OPÇÃO 1: Usar trunk fixo (temporário)
- ; Descomente e configure um trunk no pjsip.conf
- ; same => n,Dial(PJSIP/${EXTEN}@trunk-provider,60,tTr)
- 
- ; OPÇÃO 2: Buscar trunk do banco via AGI (recomendado)
- ; Requer script AGI PHP (ver pasta agi-bin/)
- ; same => n,AGI(magnus-outbound-router.php,${TENANT_SLUG},${EXTEN})
- ; same => n,GotoIf($["${TRUNK_NAME}" != ""]?dial_trunk:no_trunk)
- ; same => n(dial_trunk),Dial(PJSIP/${EXTEN}@${TRUNK_NAME},60,tTr)
- 
- ; TEMPORÁRIO: Playback para teste
- same => n,Answer()
- same => n,Playback(cannot-complete-as-dialed)
- same => n,Playback(ss-noservice)
- 
- same => n(no_trunk),Hangup()
-
-; ============================================
-; SUB-ROTINA: Números de Emergência
-; ============================================
-[dial-emergency]
-exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
- same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
- 
- ; Emergências sempre usam trunk prioritário
- ; Configure no pjsip.conf ou via AGI
- same => n,Answer()
- same => n,Playback(cannot-complete-as-dialed)
- same => n,Hangup()
-
-; ============================================
-; CONTEXTO: Chamadas Recebidas (DIDs)
-; ============================================
-[from-trunk]
-; Chamadas vindas de trunks SIP externos
-exten => _X.,1,NoOp(=== Incoming DID: ${EXTEN} ===)
- same => n,Set(DID=${EXTEN})
- same => n,Set(CHANNEL(language)=pt_BR)
- 
- ; OPÇÃO 1: Roteamento via AGI (recomendado)
- ; same => n,AGI(magnus-did-router.php,${DID})
- ; same => n,GotoIf($["${TENANT_SLUG}" != ""]?route_did:no_route)
- ; same => n(route_did),Goto(ctx-${TENANT_SLUG},${DESTINATION},1)
- 
- ; OPÇÃO 2: Roteamento manual (temporário)
- same => n,Answer()
- same => n,Playback(welcome)
- same => n,Hangup()
- 
- same => n(no_route),Playback(ss-noservice)
- same => n,Hangup()
-
-; ============================================
-; CONTEXTOS ESPECÍFICOS DE CADA TENANT
-; ============================================
-; Os endpoints PJSIP devem ter context=ctx-{slug}
-; Exemplo: ps_endpoints.context = 'ctx-belavista'
-
-[ctx-belavista](tenant-base)
-; Tenant: Bela Vista
-; Herda todas as features de [tenant-base]
-; Adicione customizações específicas aqui se necessário
-
-[ctx-acme](tenant-base)
-; Tenant: ACME Corporation
-
-[ctx-techno](tenant-base)
-; Tenant: Techno Solutions
-
-; ============================================
-; CONTEXTO PADRÃO (Fallback)
-; ============================================
-[default]
-exten => _X.,1,NoOp(Unrouted context)
- same => n,Playback(ss-noservice)
- same => n,Hangup()
-
-; ============================================
-; HINTS PARA BLF (Busy Lamp Field)
-; ============================================
-; Estes hints permitem que ramais vejam o status uns dos outros
-; Exemplo:
-; exten => 1001@belavista,hint,PJSIP/1001@belavista
-; exten => 1002@belavista,hint,PJSIP/1002@belavista
-;
-; Para 1.000+ tenants, gere hints dinamicamente via script
-; ou use res_pjsip_mwi para mailbox notification
+; Arquivo de personalizações locais (não sobrescrever base)
+#include extensions_custom.conf
