--- a/asterisk_etc/features.conf
+++ b/asterisk_etc/features.conf
@@ -3,32 +3,13 @@
 ; ============================================
 
 [general]
-transferdigittimeout = 3
-xfersound = beep
-xferfailsound = beeperr
-pickupexten = *8
-pickupsound = beep
-pickupfailsound = beeperr
-featuredigittimeout = 1000
-recordingfailsound = beeperr
-atxfernoanswertimeout = 15
-atxferdropcall = no
-atxferloopdelay = 10
-atxfercallbackretries = 2
-transferdialattempts = 3
-transferannouncesound = pbx-transfer
-transferretrysound = pbx-invalid
-transferinvalidsound = privacy-incorrect
-atxferabort = *1
-atxfercomplete = *4
-atxferthreeway = *5
-atxferswap = *6
+#include features_general_additional.conf
+#include features_general_custom.conf
 
 [featuremap]
-blindxfer => #1
-disconnect => *0
-atxfer => *2
-parkcall => #72
-automixmon => *3
+#include features_featuremap_additional.conf
+#include features_featuremap_custom.conf
 
 [applicationmap]
+#include features_applicationmap_additional.conf
+#include features_applicationmap_custom.conf
