refactor(dialplan): centralize tenant resolution in reusable subroutines

--- a/asterisk_etc/extensions-features.conf
+++ b/asterisk_etc/extensions-features.conf
@@ -30,8 +30,9 @@ exten => *98,1,NoOp(=== Status Check ===)
 
 ; *97 - VoiceMail Check (Própria caixa postal)
 exten => *97,1,NoOp(=== VoiceMail Main: ${CALLERID(num)} ===)
+ same => n,Gosub(sub-tenant-vars,s,1)
  same => n,Answer()
- same => n,VoiceMailMain(${CALLERID(num)}@${CONTEXT})
+ same => n,VoiceMailMain(${FROM_EXTEN}@${CONTEXT})
  same => n,Hangup()
 
 ; *99XXXX - VoiceMail Deposit (Deixar mensagem)
@@ -60,16 +61,16 @@ exten => *66,1,NoOp(=== Stop Call Recording ===)
 
 ; *72XXXX - Call Forward Enable
 exten => _*72XXXX,1,NoOp(=== Call Forward Enable: ${CALLERID(num)} -> ${EXTEN:3} ===)
+ same => n,Gosub(sub-tenant-vars,s,1)
  same => n,Answer()
- same => n,Set(FROM_EXTEN=${CALLERID(num)})
  same => n,Set(DB(CF/${FROM_EXTEN})=${EXTEN:3})
  same => n,Playback(call-fwd-on)
  same => n,Hangup()
 
 ; *73 - Call Forward Disable
 exten => *73,1,NoOp(=== Call Forward Disable: ${CALLERID(num)} ===)
+ same => n,Gosub(sub-tenant-vars,s,1)
  same => n,Answer()
- same => n,Set(FROM_EXTEN=${CALLERID(num)})
  same => n,DBdel(CF/${FROM_EXTEN})
  same => n,Playback(call-fwd-off)
  same => n,Hangup()
@@ -90,17 +91,13 @@ exten => *8,1,NoOp(=== Group Pickup ===)
 
 ; *8XXX - Directed Pickup (3 dígitos)
 exten => _*8XXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,Gosub(sub-tenant-vars,s,1)
  same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
  same => n,Hangup()
 
 ; *8XXXX - Directed Pickup (4 dígitos)
 exten => _*8XXXX,1,NoOp(=== Directed Pickup ${EXTEN:2} ===)
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,Gosub(sub-tenant-vars,s,1)
  same => n,PickupChan(PJSIP/${TENANT_SLUG}_${EXTEN:2})
  same => n,Hangup()
 
@@ -147,9 +144,7 @@ exten => _*334XXXX,1,NoOp(=== Whisper to ${EXTEN:4} ===)
 ; ============================================
 [open-gate]
 exten => s,1,NoOp(=== Open Gate: ${GATE_NAME} - Caller: ${CALLERID(num)} ===)
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(CHANNEL(endpoint),_,1)}))
+ same => n,Gosub(sub-tenant-vars,s,1)
  
  ; Validar permissão via API
  same => n,Set(API_URL=http://backend:5000/api/agi/check-gate-permission)
