--- a/asterisk_etc/routing.conf
+++ b/asterisk_etc/routing.conf
@@ -4,19 +4,42 @@
 ; ============================================
 
 ; ============================================
+; SUB-ROTINA: Resolver variáveis de tenant/ramal
+; Exporta: FROM_ENDPOINT, TENANT_SLUG, FROM_EXTEN, DIAL_OPTIONS
+; ============================================
+[sub-tenant-vars]
+exten => s,1,NoOp(=== Resolve Tenant Vars ===)
+ same => n,Set(__FROM_ENDPOINT=${CHANNEL(endpoint)})
+ same => n,Set(__TENANT_SLUG=${CHANNEL(tenantid)})
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(__TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
+ same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(__TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
+ same => n,Set(__FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(__FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
+ same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(__FROM_EXTEN=${CALLERID(num)}))
+ same => n,Set(__DIAL_OPTIONS=TtKkHhXx)
+ same => n,NoOp(Resolved: endpoint=${FROM_ENDPOINT} tenant=${TENANT_SLUG} exten=${FROM_EXTEN})
+ same => n,Return()
+
+; ============================================
+; SUB-ROTINA: Montar endpoint de destino
+; ARG1 = número/ramal destino
+; Retorna GOSUB_RETVAL com endpoint completo
+; ============================================
+[sub-build-dest-endpoint]
+exten => s,1,NoOp(=== Build Destination Endpoint: ${ARG1} ===)
+ same => n,Set(GOSUB_RETVAL=${ARG1}@${TENANT_SLUG})
+ same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(GOSUB_RETVAL=${TENANT_SLUG}_${ARG1}))
+ same => n,NoOp(Destination endpoint: ${GOSUB_RETVAL})
+ same => n,Return()
+
+; ============================================
 ; SUB-ROTINA: Discagem Interna
 ; ============================================
 [dial-internal]
 exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
- same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
- same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
- same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
- same => n,Set(DEST_ENDPOINT=${EXTEN}@${TENANT_SLUG})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${EXTEN}))
+ same => n,Gosub(sub-tenant-vars,s,1)
+ same => n,Gosub(sub-build-dest-endpoint,s,1(${EXTEN}))
+ same => n,Set(DEST_ENDPOINT=${GOSUB_RETVAL})
  
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Route: ${FROM_EXTEN}@${TENANT_SLUG} -> ${DEST_ENDPOINT})
  
@@ -25,11 +48,11 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,GotoIf($["${CF_TARGET}" != ""]?call_forward:normal_call)
  
  same => n(call_forward),NoOp(Forwarded to ${CF_TARGET})
- same => n,Set(DEST_ENDPOINT=${CF_TARGET}@${TENANT_SLUG})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${CUT(FROM_ENDPOINT,@,1)}"]?Set(DEST_ENDPOINT=${TENANT_SLUG}_${CF_TARGET}))
+ same => n,Gosub(sub-build-dest-endpoint,s,1(${CF_TARGET}))
+ same => n,Set(DEST_ENDPOINT=${GOSUB_RETVAL})
  
  same => n(normal_call),Set(CALLERID(name)=${FROM_EXTEN})
- same => n,Dial(PJSIP/${DEST_ENDPOINT},30,TtKkHhXx)
+ same => n,Dial(PJSIP/${DEST_ENDPOINT},30,${DIAL_OPTIONS})
  
  ; Tratamento de não atendimento
  same => n,GotoIf($["${DIALSTATUS}" = "NOANSWER"]?voicemail)
@@ -54,13 +77,7 @@ exten => _X.,1,NoOp(=== Internal Call: ${CALLERID(num)} -> ${EXTEN} ===)
 ; ============================================
 [dial-outbound]
 exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
- same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
- same => n,Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,@,1)})
- same => n,ExecIf($["${FROM_ENDPOINT}" = "${FROM_EXTEN}"]?Set(FROM_EXTEN=${CUT(FROM_ENDPOINT,_,2)}))
- same => n,ExecIf($["${FROM_EXTEN}" = ""]?Set(FROM_EXTEN=${FROM_ENDPOINT}))
+ same => n,Gosub(sub-tenant-vars,s,1)
  
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | External: ${FROM_EXTEN}@${TENANT_SLUG} -> ${EXTEN})
  
@@ -77,7 +94,7 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
  same => n,Set(TRUNK_NAME=trunk-provider)
  same => n,GotoIf($["${TRUNK_NAME}" != ""]?dial_trunk:no_trunk)
  
- same => n(dial_trunk),Dial(PJSIP/${EXTEN}@${TRUNK_NAME},60,TtKkHhXx)
+ same => n(dial_trunk),Dial(PJSIP/${EXTEN}@${TRUNK_NAME},60,${DIAL_OPTIONS})
  same => n,GotoIf($["${DIALSTATUS}" = "BUSY"]?busy:unavail)
  same => n,Hangup()
  
@@ -100,15 +117,12 @@ exten => _X.,1,NoOp(=== Outbound Call: ${CALLERID(num)} -> ${EXTEN} ===)
 ; ============================================
 [dial-emergency]
 exten => _X.,1,NoOp(=== Emergency Call: ${EXTEN} ===)
- same => n,Set(FROM_ENDPOINT=${CHANNEL(endpoint)})
- same => n,Set(TENANT_SLUG=${CHANNEL(tenantid)})
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,@,2)}))
- same => n,ExecIf($["${TENANT_SLUG}" = ""]?Set(TENANT_SLUG=${CUT(FROM_ENDPOINT,_,1)}))
+ same => n,Gosub(sub-tenant-vars,s,1)
  same => n,NoOp(TenantID=${CHANNEL(tenantid)} | Emergency tenant=${TENANT_SLUG})
  
  ; Emergências sempre usam trunk prioritário
  same => n,Set(TRUNK_NAME=trunk-emergency)
- same => n,Dial(PJSIP/${EXTEN}@${TRUNK_NAME},120,TtKkHhXx)
+ same => n,Dial(PJSIP/${EXTEN}@${TRUNK_NAME},120,${DIAL_OPTIONS})
  
  ; Fallback se trunk não existir
  same => n,Answer()
